--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,19 @@
       "config": { "includeFiles": ["dist/**"] }
     }
   ],
+  "functions": {
+    "api/*": {
+      "rewrites": {
+        "/doc(.*)": "/doc$1"
+      }
+    }
+  },
   "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/doc/(.*)",
+      "dest": "/doc"
+    },
     {
       "src": "/(.*)",
       "dest": "dist/index.js"
