change vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "src": "/(.*)",
       "dest": "dist/index.js"
+    },
+    {
+      "src": "/doc/(.*)",
+      "dest": "/doc/$1"
     }
   ]
 }
